--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "color-pick",
   "version": "0.1.0",
-  "homepage": "https://github.com/Aguadebebe/color-picks/settings/pages",
+  "homepage": "https://aguadebebe.github.io/color-picks/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
